# SchoolGameApplication

./: .gitignore  .gitmodules  CMakeLists.txt  known_error_codes.txt
Engine/: CMakeLists.txt
Engine/src/audio/: AudioDevice.cpp  AudioDevice.h
Engine/src/core/: Entity.cpp  Entity.h  IO.h  Input.cpp  Input.h  Logger.h  Mouse.cpp  Mouse.h  Timer.cpp  Timer.h  Window.cpp  Window.h  typedefs.h
Engine/src/math/: mat4.h  vecs.h
Engine/src/physics/: PhysicsHandler.cpp  PhysicsHandler.h  PhysicsObject.cpp  PhysicsObject.h
Engine/src/renderer/: Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  EntityRenderer.cpp  EntityRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TileRenderer.cpp  TileRenderer.h
Engine/src/stl/: Note.txt  hashmap.h  pair.h  string.cpp  string.h  vector.h
Game/: CMakeLists.txt
Game/src/: main.cpp
Game/src/core/: App.cpp  App.h  RoomManager.cpp  RoomManager.h
Game/src/entities/: FallingTile.cpp  FallingTile.h  Player.cpp  Player.h  Portal.cpp  Portal.h  RoomEntity.cpp  RoomEntity.h  Spikes.cpp  Spikes.h  Spring.cpp  Spring.h  Torch.cpp  Torch.h
MapEditor/: CMakeLists.txt
MapEditor/src/: main.cpp
MapEditor/src/core/: App.cpp  App.h
MapEditor/src/entities/: Cursor.cpp  Cursor.h  DebugBox.cpp  DebugBox.h
MapEditor/src/tools/: CollisionTool.cpp  CollisionTool.h  EntityTool.cpp  EntityTool.h  EraseTool.cpp  EraseTool.h  PaintTool.cpp  PaintTool.h  Tool.cpp  Tool.h
Resources/Shaders/: debug.frag  debug.vert  entity.frag  tile.frag  tile.vert
Rooms/: begin.room  dev.room  hight.room  paths.room  speed_need.room  spikes.room  spikey.room  the_fall.room
